# Python-Learning-Projects

./: 2ExerciseBinaryTree.py  2Grafo.py  4Grafo.py  5Grafo.py  Balanceo_Stacks.py  ExerciseBinaryTree.py  ExerciseRecursion.py  Grafo.py  Grafos.py  Queues.py  Recursion.py  pyproject.toml
Binary Tree/: BinaryTreeTemplate.py  ExerciseBinaryTree.py
Decorators/: 2Decorators.py  3Decorators.py  Decorators.py  ExersicesDecorators.py  registrar_intentos.txt
Django/: .gitignore  Teoria.py
Flask/: flask.py  pyproject.toml
Generator Expressions/: Contador_errores.py  Procesamiento_archivos.py  Teoria.py  pyproject.toml
Grafo/: 3Grafo.py  4Grafo.py  5Grafo.py
Heaps/: Heaps.py
Iterators/: 2Exerciseiterator.py  ExerciseIterator.py  Iterators.py
Lambdas/: ExercisesLambdas.py  GestionVentasLambdas.py
List Comprehensions/: Analisis_ventas.py  Teoria.py  pyproject.toml
Modulos/: builtin_functions.py  custom_functions.py  main.py  modulos.py  test_builtin.py  test_custom.py
Object Oriented Programming/: 1Exercise.py  2Exercise.py  3Execise.py  4Exercise.py  7Exercise.py  @Property@Setter.py  Abstraccion2.py  AbstraccionyClasesAbstractas.py  ClasesyObjetos.py  DunderMethods.py  DunderMethods2.py  Polimorfismo.py  Polimorfismo2.py
Package Managers/: .gitignore  Conda.py  Generador_usuarios.py  Pip.py  Poerty.py  Pypi.py  generador_frase.py  pyproject.toml  requirements.txt  uv.py
Package Managers/mi_proyecto/: pyproject.toml
Paradigms/: Declarativo.py  Funcional.py  Imperativo.py  Oop.py  Teoria.py  nombre.txt  personas.txt  pyproject.toml
(+32 files in other folders)
