[project]
name = "list-comprehensions"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "colorama>=0.4.6"
    "markdown-it-py>=3.0.0"
    "mdurl>=0.1.2"
    "pygments>=2.19.1"
    "rich>=14.0.0"
    "tabulate>=0.9.0"
    "typing-extensions>=4.13.2"
]3
