[project]
name = "generador-frases"
version = "0.1.0"
description = "Es un generador de frases"
authors = [
    {name = "Miguel Garzon", email = "miguelangelgarb@gmail.com"}
]
license = {text = "MIT"}
requires-python = "3.12.3"
dependencies = [
    "rich (>=14.0.0,<15.0.0)"
]

[tool.poetry]
# Cambia esto para que el código esté directamente en la raíz
packages = [
    { include = "generador_frase" }
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
