[project]
name = "mi-proyecto"
version = "0.1.0"
description = ""
authors = [
    {name = "Miguel Angel",email = "miguelangelgarb@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]

[tool.poetry]
packages = [{include = "mi_proyecto", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
